# ecomerce_api_fast_API

./: .dockerignore  .env  .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  POSTMAN_SETUP.md  README.md  STATUS.md  docker-compose.yml  main.py  mypy.ini  postman_collection.json  postman_environment.json  pyproject.toml  pyrightconfig.json  railway.toml  redis.config  render.yaml  requirements-dev.txt  requirements.txt  start.sh
.github/workflows/: ci-cd.yml
app/: auth.py  config.py  crud.py  database.py  exceptions.py  health.py  logging_config.py  middleware.py  models.py  redis_client.py  schemas.py
data/postgres/: postmaster.opts  postmaster.pid
data/postgres/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
data/postgres/base/16384/: 1247  1249  1259  1259_vm  13459  16385  16386  16391  16393  16394  16395  16396  16403  16405  2224  2579  2604  2606  2608  2608_fsm  2610  2610_fsm  2610_vm  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  (+3 more)
data/postgres/base/4/: 2619
data/postgres/base/5/: pg_internal.init
data/postgres/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
data/postgres/pg_stat_tmp/: pgss_query_texts.stat
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_user_flow.py
tests/integration/: __init__.py  test_auth.py  test_health.py
tests/unit/: __init__.py  test_config.py  test_exceptions.py  test_schemas.py
